# android-audio-plugin-framework

./: .gitmodules
.github/workflows/: actions.yml
java/: build.gradle  gradle.properties  settings.gradle
java/aaphostsample2/: build.gradle
java/aaphostsample2/src/androidTest/java/org/androidaudioplugin/aaphostsample2/: ExampleInstrumentedTest.kt
java/aaphostsample2/src/main/: AndroidManifest.xml
java/aaphostsample2/src/main/java/org/androidaudioplugin/aaphostsample2/: AAPHostSampleState.kt  MainActivity.kt
java/aaphostsample2/src/main/res/values/: strings.xml
java/aaphostsample2/src/test/java/org/androidaudioplugin/aaphostsample2/: ExampleUnitTest.kt
java/gradle/wrapper/: gradle-wrapper.properties
java/samples/aapcomposehostsample/: build.gradle.kts  local.properties
java/samples/aapcomposehostsample/common/: build.gradle.kts
java/samples/aapcomposehostsample/common/src/androidMain/: AndroidManifest.xml
java/samples/aapcomposehostsample/desktop/: build.gradle.kts
java/samples/aaphostdogfooding/: build.gradle
java/samples/aaphostdogfooding/src/main/: AndroidManifest.xml
java/samples/aaphostdogfooding/src/main/java/org/androidaudioplugin/samples/aaphostsample2/: AAPHostSampleState.kt  App.kt  MainActivity.kt
java/samples/aaphostsample/: build.gradle
java/samples/aaphostsample2/: build.gradle
java/samples/aaphostsample2/src/main/: AndroidManifest.xml
java/samples/aaphostsample2/src/main/res/values/: strings.xml
native/: CMakeLists.txt
native/androidaudioplugin/: CMakeLists.txt
native/samples/: CMakeLists.txt
(+8 files in other folders)
